# laravel-docs-mcp

./: .gitignore  Cargo.toml  README.md
artifacts/chunks/: docs_chunks_SZ_400_O_20.jsonl
src/: chunker.rs  error.rs  lib.rs  main.rs  text_splitter.rs  vectorizer.rs
