[package]
name = "laravel-docs-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.1.5", features = [
  "server",
  "transport-sse-server",
  "transport-io",
] }
# sqlx = { version = "0.8.5", features = ["sqlite", "runtime-tokio-native-tls", "macros", "chrono"] }
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.98"
# uuid = { version = "1.16", features = ["v4"] }
# html2md = "0.2"
chrono = "0.4.41"
# git2 = "0.20.1"
# pulldown-cmark = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
log = "0.4"
env_logger = "0.10"
md-5 = "0.10.6"
# regex = "1.10.3"
clap = { version = "4.5.3", features = ["derive", "env"] }
character_text_splitter = "0.1.2"
sqlite-vec = "0.1.6"
rusqlite = {version = "0.35.0", features = ["bundled"]}
fastembed = "4.8.0"
bytemuck = "1.23.0"
thiserror = "2.0.12"
walkdir = "2.5.0"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }

[dev-dependencies]
rmcp = { version = "0.1.5", features = [
  "client",
  "transport-child-process",
  "transport-sse",
] }
